--- a/Portfolio/Back End/src/main/resources/application.properties
+++ b/Portfolio/Back End/src/main/resources/application.properties
@@ -1,8 +1,17 @@
- spring.jpa.hibernate.ddl-auto=update
- spring.datasource.url=jdbc:mysql://localhost:3306/backendmm?useSSL=false&serverTimezone=UTC
- spring.datasource.username=root
- spring.datasource.password=
- spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#Prueba
+
+ #spring.jpa.hibernate.ddl-auto=update
+ #spring.datasource.url=jdbc:mysql://localhost:3306/backendmm?useSSL=false&serverTimezone=UTC
+ #spring.datasource.username=root
+ #spring.datasource.password=
+ #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+ 
+#Final
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://uc2k68nv9qzl2nzd:6QtXG0KyaQtgJYWgxrwZ@bm50yb1cajkf7eyohi2a-mysql.services.clever-cloud.com:3306/bm50yb1cajkf7eyohi2a
+spring.datasource.username=uc2k68nv9qzl2nzd
+spring.datasource.password=6QtXG0KyaQtgJYWgxrwZ
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
 jwt.secret = secret
