--- a/Portfolio/Back End/src/main/resources/application.properties
+++ b/Portfolio/Back End/src/main/resources/application.properties
@@ -7,9 +7,9 @@
  
 #Final
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://uc2k68nv9qzl2nzd:6QtXG0KyaQtgJYWgxrwZ@bm50yb1cajkf7eyohi2a-mysql.services.clever-cloud.com:3306/bm50yb1cajkf7eyohi2a
-spring.datasource.username=uc2k68nv9qzl2nzd
-spring.datasource.password=6QtXG0KyaQtgJYWgxrwZ
+spring.datasource.url=jdbc:mysql://root:Fq1pwp5rygjCF57DiDPW@containers-us-west-179.railway.app:7245/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Fq1pwp5rygjCF57DiDPW
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
