cambios base de datos 2

--- a/Portfolio/Back End/src/main/resources/application.properties
+++ b/Portfolio/Back End/src/main/resources/application.properties
@@ -7,7 +7,7 @@
  
 #Final
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:Fq1pwp5rygjCF57DiDPW@containers-us-west-179.railway.app:7245/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://root:Fq1pwp5rygjCF57DiDPW@containers-us-west-179.railway.app:7245/railway
 spring.datasource.username=root
 spring.datasource.password=Fq1pwp5rygjCF57DiDPW
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
